--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
     <span>Email: @Model.UserEmail</span>
     <br/>
     <br/>
-    <button type="button" class="btn btn-primary rounded-pill px-3">Entrar Conta</button>
+    <button type="button" class="btn btn-primary rounded-pill px-3">Entrar</button>
     <button type="button" class="btn btn-secondary rounded-pill px-3">Criar Conta</button>
 </div>
