--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -8,13 +8,13 @@
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
         <h2 class="fw-normal">Heading</h2>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/henriquecostadsantos/">linkedIn »</a></p>
+        <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/henriquecostadsantos/">LinkedIn</a></p>
     </div>
     <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
         <h2 class="fw-normal">Heading</h2>
         <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/vitor-gomes-5477aa209/">LinkedIn »</a></p>
+        <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/vitor-gomes-5477aa209/">LinkedIn</a></p>
     </div>
   
 </div>
