--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Fi Group Finance</h1>
     <p>Inovando em soluções financeiras</p>
-    <span>Usuário: @Model.UserName</span>
+    <span>Usuário: @Model.UserName e @Model.UserName</span>
     <span>Email: @Model.UserEmail</span>
     <br/>
     <br/>
