--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -3,3 +3,17 @@
 }
 <h1> Quem está por trás do projeto?</h1>
 <p>O Projeto Fi Finance é uma iniciativa inovadora que está sendo desenvolvida com dedicação e talento por dois estagiários do programa Speeds, Vitor e Henrique. Este sistema tem como objetivo criar uma solução moderna e eficiente para operações financeiras, integrando funcionalidades de caixa eletrônico e cadastro de usuários. A visão do projeto é simplificar a gestão de transações e oferecer uma experiência intuitiva e segura para os usuários, combinando tecnologia de ponta com um design acessível e funcional. Sob a liderança criativa de Vitor e Henrique, o Projeto Fi Finance promete transformar a maneira como interagimos com serviços financeiros no dia a dia.</p>
+<div style="display : flex">
+<div class="card" style="width: 18rem;">
+    <img src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1616261942396?e=1747872000&v=beta&t=YCEE-kg6rTA9zYcYhVJyMrkRMfSPLCRG-kUu93qr79E" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+</div>
+<div class="card" style="width: 18rem;">
+    <img src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1672980045555?e=1747872000&v=beta&t=s2RAwmvd0ekXOoBBxuRXD3o8n9mrsLCMOdGePie70CI" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+</div>
+</div>
