--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -3,15 +3,15 @@
 }
 <h1> Quem está por trás do projeto?</h1>
 <p>O Projeto Fi Finance é uma iniciativa inovadora que está sendo desenvolvida com dedicação e talento por dois estagiários do programa Speeds, Vitor e Henrique. Este sistema tem como objetivo criar uma solução moderna e eficiente para operações financeiras, integrando funcionalidades de caixa eletrônico e cadastro de usuários. A visão do projeto é simplificar a gestão de transações e oferecer uma experiência intuitiva e segura para os usuários, combinando tecnologia de ponta com um design acessível e funcional. Sob a liderança criativa de Vitor e Henrique, o Projeto Fi Finance promete transformar a maneira como interagimos com serviços financeiros no dia a dia.</p>
-
-<div class="row">
-    <div class="col-lg-4">
+<br/>
+<div class="row" style="justify-content: center">
+    <div class="col-lg-4" style="text-align: center">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-stack, Estagiário Speed</p>
         <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/henriquecostadsantos/">LinkedIn</a></p>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4" style="text-align: center">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-stack, Estagiário Speed</p>
