--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -4,13 +4,37 @@
     ViewData["Title"] = "Fi Group Finance";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Fi Group Finance</h1>
-    <p>Inovando em soluções financeiras</p>
-    <span>Usuário: @Model.UserName</span>
-    <span>Email: @Model.UserEmail</span>
-    <br/>
-    <br/>
-    <button type="button" class="btn btn-primary rounded-pill px-3">Entrar Conta</button>
-    <button type="button" class="btn btn-secondary rounded-pill px-3">Criar Conta</button>
-</div>
+<body class="text-center" style="justify-content:center">
+
+    <main class="form-signin">
+        <form>
+            <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
+            <h1 class="h3 mb-3 fw-normal">Inovação Financeira</h1>
+
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInput" placeholder="adm.vh@fi-group.com">
+                <label for="floatingInput">Endereço de Email</label>
+                <div data-lastpass-icon-root="" style="position: relative !important; height: 0px !important; width: 0px !important; float: left !important;"></div>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="imaginaumasenha">
+                <label for="floatingPassword">Digite sua Senha</label>
+                <div data-lastpass-icon-root="" style="position: relative !important; height: 0px !important; width: 0px !important; float: left !important;"></div>
+            </div>
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Lembre de mim
+                </label>
+            </div>
+            <button class="btn btn-primary rounded-pill px-3" type="submit">Entrar</button>
+            <br />
+            <button class="btn btn-primary rounded-pill px-3 mt-2" type="submit" >Criar Conta</button>
+        </form>
+    </main>
+
+
+
+
+
+</body>
