--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             </div>
             <button class="btn btn-primary rounded-pill px-3" type="submit">Entrar</button>
             <br />
-            <button class="btn btn-primary rounded-pill px-3 mt-2" type="submit" >Criar Conta</button>
+            <button class="btn btn-primary rounded-pill px-3 mt-2" type="submit"  asp-controller="Home" asp-action="Login">Criar Conta</button>
         </form>
     </main>
 
