--- a/Projeto_MVC/wwwroot/css/site.css
+++ b/Projeto_MVC/wwwroot/css/site.css
@@ -46,3 +46,34 @@ body {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
+
+
+.bd-img {
+    margin-left: 20px;
+    border-left: 2px solid rgba(0, 0, 0, 0)
+}
+
+.bd-placeholder-img {
+    opacity: 0.7;
+    transition: opacity 0.5s ease;
+}
+
+    .bd-placeholder-img:hover {
+        opacity: 1;
+    }
+
+
+.bg-body-secondary {
+    background-color: rgba(233, 236, 239, 1);
+}
+
+.justify {
+    text-align: justify;
+}
+
+.card {
+    padding-top:20px;
+    margin: auto;
+    background: rgb(236, 236, 236);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
