Tela de Serviços

--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                     <input type="checkbox" value="remember-me"> Lembre de mim
                 </label>
             </div>
-            <button class="btn btn-primary rounded-pill px-3" type="submit">Entrar</button>
+            <button class="btn btn-primary rounded-pill px-3" type="submit" asp-controller="Home" asp-action="Services">Entrar</button>
             <br />
             <button class="btn btn-primary rounded-pill px-3 mt-2" type="submit"  asp-controller="Home" asp-action="Login">Criar Conta</button>
         </form>
