--- a/Projeto_MVC/Views/Home/Login.cshtml
+++ b/Projeto_MVC/Views/Home/Login.cshtml
@@ -37,5 +37,5 @@
 </div>
 <br />
 <div style="text-align: center; margin-top: -5%">
-    <button class="btn btn-primary rounded-pill px-3" type="submit">Criar Conta</button>
+    <button class="btn btn-primary rounded-pill px-3" type="submit" asp-controller="Home" asp-action="Services">Criar Conta</button>
 </div>
