burro demais slk kkkk

--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -1,4 +1,4 @@
-﻿<<div class="container col-xxl-8 px-4 py-5">
+﻿<div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="https://media.istockphoto.com/id/1418476287/pt/foto/businessman-analyzing-companys-financial-balance-sheet-working-with-digital-augmented-reality.jpg?b=1&s=612x612&w=0&k=20&c=EIy1m7z9GbXHloEqxzcdjzk1xFHvfw5TV_SK9O41Xdk=" class="d-block mx-lg-auto img-fluid" alt="Temas Bootstrap" width="700" height="500" loading="lazy">
