Correção do Botão de Perfil na Services

--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -8,7 +8,7 @@
             <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">No momento estamos adicionando funcionalidades novas veja a que foi criada inicialmente</font></font></p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <button type="button" class="btn btn-primary btn-lg px-4 me-md-2"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Calculo de IR</font></font></button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Perfil</font></font></button>
+                <button type="submit" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href='/Home/Profile'">Perfil</button>
             </div>
         </div>
     </div>
