criação tela edit

--- a/Projeto_MVC/Views/Home/Profile.cshtml
+++ b/Projeto_MVC/Views/Home/Profile.cshtml
@@ -3,7 +3,7 @@
     <div class="card-body">
         <h5 class="card-title">Beta User</h5>
         <p class="card-text">Usuário da Versão de Desenvolvimento</p>
-        <a href="#" class="btn btn-primary">Editar Perfil</a>
+        <button type="submit" class="btn btn-primary rounded-pill px-3 mt-2" onclick="location.href='/Home/Edit'">Editar Perfil</button>
     </div>
 </div>
 
