--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -7,8 +7,8 @@
             <h1 class="display-5 fw-bold lh-1 mb-3"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Fi Group Finance</font></font></h1>
             <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">No momento estamos adicionando funcionalidades novas veja a que foi criada inicialmente</font></font></p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Calculo de IR</font></font></button>
-                <button type="submit" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href='/Home/Profile'">Perfil</button>
+                <button type="button" class="btn btn-primary rounded-pill px-3 mt-2">Calculo de IR</button>
+                <button type="submit" class="btn btn-primary rounded-pill px-3 mt-2" onclick="location.href='/Home/Profile'">Perfil</button>
             </div>
         </div>
     </div>
