--- a/Projeto_MVC/wwwroot/css/site.css
+++ b/Projeto_MVC/wwwroot/css/site.css
@@ -77,3 +77,12 @@ body {
     background: rgb(236, 236, 236);
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+
+.return {
+    margin-left: 20px;
+    opacity: 0.7;
+    transition: opacity 0.5s ease;
+}
+.return:hover {
+    opacity: 1;
+}
