Correção Imagens membros e adição botão voltar ir

--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -16,17 +16,17 @@
 <br/>
 <div class="row" style="justify-content: center">
     <div class="col-lg-4 card" style="text-align: center">
-        <a href="https://www.linkedin.com/in/henriquecostadsantos/">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
-        </a>
+        <div style="text-align:center">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
+        </div>
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-stack, Estagiário Speed</p>
         <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/henriquecostadsantos/">LinkedIn</a></p>
     </div>
     <div class="col-lg-4 card" style="text-align: center">
-        <a href="https://www.linkedin.com/in/vitor-gomes-5477aa209/">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
-        </a>
+        <div style="text-align:center">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+        </div>
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-stack, Estagiário Speed</p>
         <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/vitor-gomes-5477aa209/">LinkedIn</a></p>
