alteração index e correção login

--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <body class="text-center" style="justify-content:center">
 
-    <main class="form-signin">
+    <main class="form-signin card">
         <form>
             <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
             <h1 class="h3 mb-3 fw-normal">Inovação Financeira</h1>
@@ -16,6 +16,7 @@
                 <label for="floatingInput">Endereço de Email</label>
                 <div data-lastpass-icon-root="" style="position: relative !important; height: 0px !important; width: 0px !important; float: left !important;"></div>
             </div>
+            <br/>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="imaginaumasenha">
                 <label for="floatingPassword">Digite sua Senha</label>
