--- a/Projeto_MVC/Views/Home/Login.cshtml
+++ b/Projeto_MVC/Views/Home/Login.cshtml
@@ -12,13 +12,13 @@
 <div class="mb-3 row">
     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+                <input type="text" class="form-control" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
     </div>
 </div>
 <div class="mb-3 row">
     <label for="staticEmail" class="col-sm-2 col-form-label">Confirme seu Email</label>
     <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="staticEmail" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+                <input type="text" class="form-control" id="staticEmail" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
     </div>
 </div>
 <div class="mb-3 row">
