--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -11,12 +11,11 @@
             <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
             <h1 class="h3 mb-3 fw-normal">Inovação Financeira</h1>
 
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="adm.vh@fi-group.com">
                 <label for="floatingInput">Endereço de Email</label>
                 <div data-lastpass-icon-root="" style="position: relative !important; height: 0px !important; width: 0px !important; float: left !important;"></div>
             </div>
-            <br/>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="imaginaumasenha">
                 <label for="floatingPassword">Digite sua Senha</label>
