Alteração botão linkedin, alteração botão voltar

--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -17,26 +17,38 @@
 <div class="row" style="justify-content: center">
     <div class="col-lg-3 card" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
         </div>
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
-        <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/henriquecostadsantos/">LinkedIn</a></p>
+        <div style="text-align:center">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
+                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            </button>
+        </div>
     </div>
     <div class="col-lg-3 card" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
         </div>
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
-        <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/vitor-gomes-5477aa209/">LinkedIn</a></p>
+        <div style="text-align:center">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            </button>
+        </div>
     </div>
     <div class="col-lg-3 card" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
         </div>
         <h2 class="fw-normal">Bruno Carraro</h2>
         <p>Programador Back-End, Estagiário Speed</p>
-        <p><a class="btn btn-primary rounded-pill px-3" href="https://www.linkedin.com/in/bruno-carraro-77529a1ba/">LinkedIn</a></p>
+        <div style="text-align:center">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
+                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            </button>
+        </div>
     </div>
 </div>
