correção bugs botões linkedin e voltar

--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -22,8 +22,8 @@
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
         <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
-                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            <button style="border:none; background:none; padding:0; margin-bottom:20px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
+                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
             </button>
         </div>
     </div>
@@ -34,8 +34,8 @@
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
         <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
-                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            <button style="border:none; background:none; padding:0; margin-bottom:20px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
             </button>
         </div>
     </div>
@@ -46,8 +46,8 @@
         <h2 class="fw-normal">Bruno Carraro</h2>
         <p>Programador Back-End, Estagiário Speed</p>
         <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
-                <img style="margin-bottom:20px" src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
+            <button style="border:none; background:none; padding:0; cursor:pointer; margin-bottom:20px" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
+                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
             </button>
         </div>
     </div>
