Criar conta nova Funcionando. Trabalhando em: Editar infos Documentação Swagger

--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 
     <main class="form-signin card">
         <form asp-action="Login" method="post">
+            <input type="hidden" name="_method" value="PATCH" />
             <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
             <h1 class="h3 mb-3 fw-normal">Inovação Financeira</h1>
 
