--- a/Projeto_MVC/Views/Home/Edit.cshtml
+++ b/Projeto_MVC/Views/Home/Edit.cshtml
@@ -1,41 +1,46 @@
-﻿<div style="text-align: center;">
-    <img class="mt-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
+﻿@model Projeto_MVC.Models.UserModel
+
+@{
+    ViewData["Title"] = "Edit";
+}
+
+<div style="text-align: center;">
+    <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
 </div>
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div style="width: 700px; background-color: #f5f5f5; border: 1px solid #ddd; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-        <input class="form-control" type="text" placeholder="Nome Completo" aria-label="default input example">
-        <br />
-        <input class="form-control" type="text" placeholder="CPF" aria-label="default input example">
-        <br />
-        <input class="form-control" type="text" placeholder="Data de nascimento" aria-label="default input example">
-        <br />
-        <div class="mb-3 row">
-            <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+        <form asp-action="Update" method="post">
+            <input class="form-control" type="text" name="fullName" placeholder="Nome Completo" aria-label="default input example">
+            <br />
+            <input class="form-control" type="text" name="cpf" placeholder="CPF" aria-label="default input example">
+            <br />
+            <input class="form-control" type="date" name="birthDate" placeholder="Data de nascimento" aria-label="default input example">
+            <br />
+            <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="username" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+                </div>
             </div>
-        </div>
-        <div class="mb-3 row">
-            <label for="staticEmail" class="col-sm-2 col-form-label">Confirme seu Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="staticEmail" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+            <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Confirme seu Email</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="staticEmail" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+                </div>
             </div>
-        </div>
-        <div class="mb-3 row">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Senha</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword">
+            <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Senha</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" name="password" id="inputPassword">
+                </div>
             </div>
-        </div>
-        <div class="mb-3 row">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Confirme sua Senha</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword">
+            <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Confirme sua Senha</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword">
+                </div>
             </div>
-        </div>
+            <button class="btn btn-primary rounded-pill px-3" type="submit">Salvar</button>
+        </form>
     </div>
-</div>
-<br />
-<div style="text-align: center; margin-top: -5%">
-    <button class="btn btn-primary rounded-pill px-3" onclick="location.href='/Home/Profile'">Salvar</button>
 </div>
