Botão criar conta centralizado

--- a/Projeto_MVC/Views/Home/SignUp.cshtml
+++ b/Projeto_MVC/Views/Home/SignUp.cshtml
@@ -40,7 +40,10 @@
                     <input type="password" class="form-control" id="inputPassword">
                 </div>
             </div>
-            <button class="btn btn-primary rounded-pill px-3" type="submit">Criar Conta</button>
+            <div style="text-align:center">
+                <button class="btn btn-primary rounded-pill px-3;" type="submit">Criar Conta</button>
+            </div>
+            
         </form>
     </div>
 </div>
