--- a/Projeto_MVC/Views/Home/Edit.cshtml
+++ b/Projeto_MVC/Views/Home/Edit.cshtml
@@ -40,7 +40,9 @@
                     <input type="password" class="form-control" id="inputPassword">
                 </div>
             </div>
-            <button class="btn btn-primary rounded-pill px-3" type="submit">Salvar</button>
+            <div style="text-align:center">
+                <button class="btn btn-primary rounded-pill px-3" type="submit">Salvar</button>
+            </div>
         </form>
     </div>
 </div>
