correção de bug visual

--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Fi Group Finance";
 }
 
-<body class="text-center" style="justify-content:center; overflow: hidden">
+<body class="text-center" style="justify-content:center;">
     @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
     {
         <div class="text-danger" style="margin-bottom:5px">@error.ErrorMessage</div>
