--- a/Projeto_MVC/Views/Home/SignUp.cshtml
+++ b/Projeto_MVC/Views/Home/SignUp.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Sign Up";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div style="text-align: center;">
@@ -10,16 +11,16 @@
 <div style="display: flex; justify-content: center; align-items: center;">
     <div style="width: 700px; background-color: #f5f5f5; border: 1px solid #ddd; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
         <form asp-action="NewSignUp" method="post">
-            <input class="form-control" type="text" name="fullName" placeholder="Nome Completo" aria-label="default input example">
+            <input class="form-control" asp-for="FullName" type="text" name="fullName" placeholder="Nome Completo" aria-label="default input example">
             <br />
-            <input class="form-control" type="text" name="cpf" placeholder="CPF" aria-label="default input example">
+            <input class="form-control" asp-for="CPF" type="text" name="cpf" placeholder="CPF" aria-label="default input example">
             <br />
-            <input class="form-control" type="date" name="birthDate" placeholder="Data de nascimento" aria-label="default input example">
+            <input class="form-control" asp-for="BirthDate" type="date" name="birthDate" placeholder="Data de nascimento" aria-label="default input example">
             <br />
             <div class="mb-3 row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="username" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
+                    <input type="text" asp-for="UserEmail" class="form-control" name="username" id="staticEmail" placeholder="exemplo@fi-group.com" style="background-color: white; border: 1px solid lightgray; border-radius: 5px;">
                 </div>
             </div>
             <div class="mb-3 row">
@@ -31,7 +32,7 @@
             <div class="mb-3 row">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Senha</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" name="password" id="inputPassword">
+                    <input type="password" asp-for="Password" class="form-control" name="password" id="inputPassword">
                 </div>
             </div>
             <div class="mb-3 row">
@@ -40,9 +41,10 @@
                     <input type="password" class="form-control" id="inputPassword">
                 </div>
             </div>
+
+            <div style="text-align:center">
+                <button class="btn btn-primary rounded-pill px-3;" type="submit">Criar Conta</button>
+            </div>
         </form>
-        <div style="text-align:center">
-            <button class="btn btn-primary rounded-pill px-3;" type="submit">Criar Conta</button>
-        </div>
     </div>
 </div>
