validação de login

--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -4,7 +4,7 @@
             <img src="https://media.istockphoto.com/id/1418476287/pt/foto/businessman-analyzing-companys-financial-balance-sheet-working-with-digital-augmented-reality.jpg?b=1&s=612x612&w=0&k=20&c=EIy1m7z9GbXHloEqxzcdjzk1xFHvfw5TV_SK9O41Xdk=" class="d-block mx-lg-auto img-fluid" alt="Temas Bootstrap" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Fi Group Finance</font></font></h1>
+            <h1 class="display-5 fw-bold lh-1 mb-3"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Seja muito bem vindo, @ViewBag.FullName</font></font></h1>
             <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">No momento estamos adicionando funcionalidades novas veja a que foi criada inicialmente</font></font></p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <button type="button" class="btn btn-primary rounded-pill px-3 mt-2" onclick="location.href='/Home/IncomeTaxCalculation'">Calculo de IR</button>
