correção de bug profile

--- a/Projeto_MVC/Views/Home/Profile.cshtml
+++ b/Projeto_MVC/Views/Home/Profile.cshtml
@@ -11,7 +11,7 @@
     <div class="card-body">
         <h5 class="card-title">@ViewBag.FullName</h5>
         <p class="card-text">Usuário da Versão de Desenvolvimento</p>
-        <p class="card-text">@ViewBag.UserEmail</p>
+        <p class="card-text">@ViewBag.Email</p>
         <button type="submit" class="btn btn-primary rounded-pill px-3 mt-2" onclick="location.href='/Home/Edit'">Editar Perfil</button>
     </div>
 </div>
